<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/main_l_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="34dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/zero"
            android:textSize="60sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_l_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_clear"
                style="@style/btn_1_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background1"
                android:onClick="numberClick"
                android:text="@string/clear" />

            <Button
                style="@style/btn_1_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background1"
                android:drawableStart="@drawable/ic_baseline_backspace_24"
                android:paddingStart="18dp" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/btn_3_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background3"
                android:onClick="onOperationClick"
                android:text="@string/division" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <Button
                android:id="@+id/btn_seven"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/ninie" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <Button
                android:id="@+id/btn_four"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_five"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_six"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <Button
                android:id="@+id/btn_one"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_two"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_three"
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:onClick="numberClick"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">

            <Button
                style="@style/btn_2_style"
                android:layout_width="150dp"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/btn_background2"
                android:text="@string/zero" />

            <Button
                style="@style/btn_2_style"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_background2"
                android:text="@string/comma" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_2_layout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_multiply"
            style="@style/btn_3_style"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@drawable/btn_background3"
            android:onClick="onOperationClick"
            android:paddingTop="16sp"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/btn_3_style"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_background3"
            android:onClick="onOperationClick"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/btn_3_style"
            android:layout_width="62dp"
            android:layout_height="104dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_background3"
            android:onClick="onOperationClick"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btn_equal"
            style="@style/btn_3_style"
            android:layout_width="62dp"
            android:layout_height="104dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_background3"
            android:onClick="onOperationClick"
            android:text="@string/equal" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>